# dotfiles

./: .chezmoiignore  .gitignore  .gitmodules  README.md  dotbak.toml
.config/: brave-flags.conf
.config/quickshell/common/modules/: AGENTS.md  Cargo.toml
.config/quickshell/common/modules/cmake/: QuickshellCompilerOptions.cmake
.config/quickshell/common/modules/cxxqt/: CMakeLists.txt  README.md
.config/quickshell/common/modules/material-popups/: CMakeLists.txt
.config/quickshell/common/modules/material-popups/cpp/: QsNativeMaterialPopup.cpp  QsNativeMaterialPopup.h  material_popups_api.h  materialpopups_plugin.cpp
.config/quickshell/common/modules/material-popups/material-popups-backend/: Cargo.toml  build.rs
.config/quickshell/common/modules/material-popups/material-popups-backend/src/: backend.rs
.config/quickshell/common/modules/qs-capture/: CMakeLists.txt
.config/quickshell/common/modules/qs-capture/cpp/: CaptureProvider.h  qscapture_plugin.cpp
.config/quickshell/common/modules/qs-capture/qml/qscapture/: qmldir
.config/quickshell/common/modules/qs-native/: CMakeLists.txt
.config/quickshell/common/modules/qs-native/cpp/: QsNativeAiSession.cpp  QsNativeAiSession.h  QsNativeBacklight.cpp  QsNativeBacklight.h  QsNativeBarModuleLogic.cpp  QsNativeBluetooth.cpp  QsNativeBluetooth.h  QsNativeConfigResolver.cpp  QsNativeConfigResolver.h  QsNativeGlue.h  QsNativeIcal.cpp  QsNativeIcal.h  QsNativeIdle.cpp  QsNativeIdle.h  QsNativeKeyboardLock.cpp  QsNativeKeyboardLock.h  QsNativeNetStats.cpp  QsNativeNetStats.h  QsNativePacman.cpp  QsNativePacman.h  QsNativePrivacy.cpp  QsNativePrivacy.h  QsNativeSysInfo.cpp  QsNativeSysInfo.h  QsNativeSystemdFailed.cpp  QsNativeSystemdFailedProvider.cpp  QsNativeSystemdFailedProvider.h  QsNativeTodoist.cpp  QsNativeTodoist.h  qsnative_api.h  qsnative_plugin.cpp
.config/quickshell/common/modules/qs-native/qsnative-rust/: Cargo.toml  build.rs  cbindgen.toml
.config/quickshell/common/modules/qs-native/qsnative-rust/src/: ai.rs  app_config.rs  backlight.rs  bar_module_logic.rs  bluetooth.rs  chatstore.rs  config_resolver.rs  email.rs  ffi.rs  gmail.rs  google_auth.rs  ical.rs  idle.rs  keyboard_lock.rs  lib.rs  mcp.rs  net_stats.rs  pacman.rs  privacy.rs  secrets.rs  sys_info.rs  systemd_failed.rs  todoist.rs  utils.rs
.config/quickshell/common/modules/qsmath/: CMakeLists.txt
.config/quickshell/common/modules/qsmath/cpp/: MathRenderer.cpp  QsNativeMarkdownStream.cpp  QsNativeMarkdownStream.h  qsmath_api.h  qsmath_plugin.cpp
.config/quickshell/common/modules/qsmath/qml/qsmath/: plugins.qmltypes  qmldir
.config/quickshell/common/modules/qsmath/ratex-helper/: Cargo.toml  build.rs
.config/quickshell/common/modules/qsmath/ratex-helper/src/: markdown_stream.rs
.config/quickshell/common/modules/qsmath/tests/: render_smoke.cpp
.config/quickshell/common/modules/unified-lyrics-api/: CMakeLists.txt
.config/quickshell/common/modules/unified-lyrics-api/cpp/: QsNativeUnifiedLyrics.cpp  QsNativeUnifiedLyrics.h  unifiedlyrics_api.h  unifiedlyrics_plugin.cpp  unifiedlyrics_qt_helpers.h
.config/quickshell/common/modules/unified-lyrics-api/unifiedlyrics-rust/: Cargo.toml  build.rs
.config/quickshell/common/modules/unified-lyrics-api/unifiedlyrics-rust/src/: lib.rs
.dotbak/: manifest.toml
managed/config/quickshell/bar/scripts/src/todoist-api/: Cargo.toml
managed/config/quickshell/common/modules/cxxqt/: CMakeLists.txt
managed/config/quickshell/common/modules/material-popups/: CMakeLists.txt
managed/config/quickshell/common/modules/material-popups/material-popups-backend/: Cargo.toml  build.rs
managed/config/quickshell/common/modules/qs-capture/: CMakeLists.txt
managed/config/quickshell/common/modules/qs-capture/cpp/: CaptureProvider.cpp  CaptureProvider.h
managed/config/quickshell/common/modules/qs-capture/protocol/: wlr-screencopy-unstable-v1.xml
managed/config/quickshell/common/modules/qs-go/: CMakeLists.txt  go.mod  go.sum
managed/config/quickshell/common/modules/qs-go/capi/: main.go
managed/config/quickshell/common/modules/qs-go/cpp/: QsGoAiModels.cpp  QsGoAiModels.h  QsGoAiSession.cpp  QsGoAiSession.h  QsGoBacklight.cpp  QsGoBacklight.h  QsGoConfigResolver.cpp  QsGoConfigResolver.h  QsGoHyprlandSnapshot.cpp  QsGoHyprlandSnapshot.h  QsGoIcal.cpp  QsGoIcal.h  QsGoNetStats.cpp  QsGoNetStats.h  QsGoPacman.cpp  QsGoPacman.h  QsGoSysInfo.cpp  QsGoSysInfo.h  QsGoSystemdFailed.cpp  QsGoSystemdFailed.h  QsGoTodoist.cpp  QsGoTodoist.h  qsgo_go_api.h  qsgo_plugin.cpp
managed/config/quickshell/common/modules/qs-native/: AGENTS.md  CMakeLists.txt  Cargo.toml  README.md  build.rs  cmake_copy_cxxqt_archive.cmake  cmake_copy_cxxqt_headers.cmake  cmake_copy_qml_module.cmake
managed/config/quickshell/common/modules/qs-native/cpp/: QsNativeAiSession.cpp  QsNativeAiSession.h  QsNativeBarModuleLogic.cpp  QsNativeBarModuleLogic.h  QsNativeSystemdFailed.h  qs_native_plugin.cpp  qsnative_api.h  qsnative_plugin.cpp
managed/config/quickshell/common/modules/qs-native/qsnative-rust/: Cargo.toml  build.rs
managed/config/quickshell/common/modules/qs-native/src/: lib.rs
managed/config/quickshell/common/modules/qsmath/: CMakeLists.txt
managed/config/quickshell/common/modules/qsmath/cpp/: MathRenderer.cpp  MathRenderer.h  qsmath_plugin.cpp
managed/config/quickshell/common/modules/qsmath/ratex-helper/: Cargo.toml  build.rs
managed/config/quickshell/common/modules/spotify-lyrics-api/: CMakeLists.txt  README.md  go.mod
managed/config/quickshell/common/modules/unified-lyrics-api/: CMakeLists.txt  README.md  go.mod
managed/config/quickshell/outlook/: .gitignore  README.md  pyproject.toml
managed/config/quickshell/outlook/docs/: live-verification.md  owa-internal-api.md  playwright-capture.md  search.md  token-refresh.md
managed/config/quickshell/outlook/examples/: session.example.json
managed/config/quickshell/outlook/src/outlook_internal/: __init__.py  capture.py  cli.py  client.py  payloads.py  session.py
managed/config/quickshell/outlook/tests/: test_client_normalization.py  test_payloads.py  test_session.py
(+931 files in other folders)
