[package]
name = "material_popups_backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "material_popups_backend"
crate-type = ["staticlib", "rlib"]

[dependencies]
evdev = "0.13"
wayland-clipboard-listener = { version = "0.6.1", features = ["wlr-data-control"] }

[build-dependencies]
cbindgen = "0.29"

[lints]
workspace = true
