[package]
name = "unifiedlyrics_rust"
version = "0.1.0"
edition = "2021"
autobins = false

[lib]
name = "unifiedlyrics_rust"
crate-type = ["staticlib", "rlib"]

# Stage-1 stub: the real lyrics client (NetEase/LRCLIB crypto + HTTP) is gone
# for now, so the crate is std-only. TODO(stage2): restore aes/cipher/ecb/hmac/
# md-5/sha1/sha2/cookie/url/ureq/regex/serde when the client is reinstated.
[dependencies]

[build-dependencies]
cbindgen = "0.29"

[lints]
workspace = true
